# oronsay

./: .gitignore  Cargo.toml
src/: consts.rs  lib.rs  main.rs  reader.rs  solver.rs  sudoku.rs  types.rs  worker.rs  writer.rs
src/solver/: basic.rs
