[package]
name = "oronsay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
num-format = "0.4.4"
itertools = "0.14.0"
crossbeam = "0.8.4"
memmap2 = "0.9.5"
sha2 = "0.10.8"
